RFMO-3520,RFMO-3504 License Center alignment issue fixed in Pdf and Horizontal scroll bar in route simulation fixed

--- a/RM/RM.Client/wwwroot/app/map-panel/map-panel.scss
+++ b/RM/RM.Client/wwwroot/app/map-panel/map-panel.scss
@@ -45,7 +45,7 @@ map-panel {
 
 .map-panel .map-panel-content{
     @include height(calc(100% - 50px));
-    overflow: auto;
+    /*overflow: auto;*/
     pointer-events: auto;
 }
 
